[ASN-120] fix: dto 수정, 프로필, 썸네일 들어가게 수정