@@ -2,9 +2,13 @@ package com.ott.core.modules.search.service;
 
 import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
 import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import com.ott.common.persistence.entity.User;
+import com.ott.common.persistence.entity.WatchHistory;
 import com.ott.common.persistence.enums.VideoType;
 import com.ott.core.modules.search.document.VideoDocument;
 import com.ott.core.modules.search.dto.VideoSearchResponse;
+import com.ott.core.modules.user.repository.UserRepository;
+import com.ott.core.modules.watch.repository.WatchHistoryRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -15,7 +19,10 @@ import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.stereotype.Service;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -23,11 +30,13 @@ import java.util.stream.Collectors;
 public class VideoSearchService {
 
     private final ElasticsearchOperations elasticsearchOperations;
+    private final UserRepository userRepository;
+    private final WatchHistoryRepository watchHistoryRepository;
 
     /**
      * 1. 메인 검색 API (형태소 분석 + 필터링 + 오타 보정)
      */
-    public Page<VideoSearchResponse> searchVideos(String keyword, VideoType videoType, String tag, Pageable pageable) {
+    public Page<VideoSearchResponse> searchVideos(Long currentUserId, String keyword, VideoType videoType, String tag, Pageable pageable) {
 
         BoolQuery.Builder boolQueryBuilder = new BoolQuery.Builder();
 
@@ -65,12 +74,41 @@ public class VideoSearchService {
 
         // ES에 쿼리 실행
         SearchHits<VideoDocument> searchHits = elasticsearchOperations.search(nativeQuery, VideoDocument.class);
+        List<VideoDocument> documents = searchHits.getSearchHits().stream().map(SearchHit::getContent).toList();
 
-        // 결과를 DTO로 변환
-        List<VideoSearchResponse> content = searchHits.getSearchHits().stream()
-                .map(SearchHit::getContent)
-                .map(VideoSearchResponse::from)
-                .collect(Collectors.toList());
+        if (documents.isEmpty()) {
+            return new PageImpl<>(List.of(), pageable, searchHits.getTotalHits());
+        }
+
+        // 2. 검색된 영상들의 업로더 ID와 비디오 ID 추출
+        Set<Long> uploaderIds = documents.stream().map(VideoDocument::getUserId).collect(Collectors.toSet());
+        List<Long> videoIds = documents.stream().map(VideoDocument::getVideoId).toList();
+        // 3. 업로더 프로필 정보 한 번에(IN 쿼리) 조회
+        Map<Long, User> uploaderMap = userRepository.findAllById(uploaderIds).stream()
+                .collect(Collectors.toMap(User::getId, u -> u));
+
+        // 4. 로그인한 유저라면 시청 이력 한 번에(IN 쿼리) 조회
+        Map<Long, Integer> progressMap = new HashMap<>();
+        if (currentUserId != null) {
+            // (주의: repository에 findByUserIdAndVideoIdIn 메서드가 있다고 가정)
+            List<WatchHistory> histories = watchHistoryRepository.findByUserIdAndVideoMetadata_VideoIdIn(currentUserId, videoIds);
+            for (WatchHistory wh : histories) {
+                Integer duration = wh.getVideoMetadata().getDuration();
+                Integer lastPos = wh.getLastPosition();
+                if (duration != null && duration > 0 && lastPos != null) {
+                    int progress = (int) Math.min(100.0, Math.round(((double) lastPos / duration) * 100));
+                    progressMap.put(wh.getVideoMetadata().getVideoId(), progress);
+                }
+            }
+        }
+        // 5. 뼈대(Document) + 살(Uploader, Progress) 합치기!
+        List<VideoSearchResponse> content = documents.stream().map(doc -> {
+            User uploader = uploaderMap.get(doc.getUserId());
+            String uploaderName = (uploader != null) ? uploader.getNickname() : "알 수 없음";
+            String profileUrl = (uploader != null) ? uploader.getProfileImageUrl() : "";
+            int progress = progressMap.getOrDefault(doc.getVideoId(), 0);
+            return VideoSearchResponse.of(doc, uploaderName, profileUrl, progress);
+        }).collect(Collectors.toList());
 
         return new PageImpl<>(content, pageable, searchHits.getTotalHits());
     }
